# Bouldrovka

./: .gitignore  .project  ;  README.md  TODO.md  build.gradle  build.sh  compile_commands.json  local.properties
.cache/clangd/index/: IMG.c.B5D8929AF932C831.idx  IMG_WIC.c.1DE28610C06C4807.idx  IMG_avif.c.3629B182DD930429.idx  IMG_bmp.c.F735C1CBD6624C19.idx  IMG_gif.c.266314E6FFED96C0.idx  IMG_jpg.c.6B02BC8E9A154879.idx  IMG_jxl.c.11D104F349F83717.idx  IMG_lbm.c.F868024391C9B116.idx  IMG_pcx.c.756EA5A1DB99E898.idx  IMG_png.c.999F225CC2B2DA20.idx  IMG_pnm.c.003F7AD631F49A38.idx  IMG_qoi.c.2EE30D9958768B55.idx  IMG_stb.c.905120A31A15BF00.idx  IMG_svg.c.D6EE210EA0325505.idx  IMG_tga.c.FB85D41B1736AF75.idx  IMG_tif.c.E88F7B9C95777C13.idx  IMG_webp.c.09E868DF0CC3CFCE.idx  IMG_xcf.c.850350C1647FDBC3.idx  IMG_xpm.c.53862D5A292AFA19.idx  IMG_xv.c.6364863C2DF49788.idx  SDL.c.CE260F7A9B981EFC.idx  SDL_RLEaccel.c.8C6BD68E7D7F8CD5.idx  SDL_aaudio.c.330357C7227BAA55.idx  SDL_android.c.66A88099674AF3F0.idx  SDL_androidaudio.c.1D0380CC8720BD81.idx  SDL_androidclipboard.c.2424AFA3ECD4DE36.idx  SDL_androidevents.c.5CC8499FA8006BCF.idx  SDL_androidgl.c.97C563C8B48F94D9.idx  SDL_androidkeyboard.c.E78DDFF45092AE0B.idx  SDL_androidmessagebox.c.672E770293649832.idx  SDL_androidmouse.c.AE3B2E4EBC58AF87.idx  SDL_androidsensor.c.E2A7E1553E874826.idx  SDL_androidtouch.c.49B5B859AEADDFE5.idx  SDL_androidvideo.c.D50F604FF8FC92A7.idx  SDL_androidvulkan.c.1538F0495642C2D6.idx  SDL_androidwindow.c.67E4840760376513.idx  SDL_assert.c.803920E0A79D138C.idx  SDL_atomic.c.2F7B83B78E7CD1C1.idx  SDL_audio.c.5C11CAC8953B5D48.idx  SDL_audiocvt.c.52AF8F452F7A4334.idx  (+256 more)
app/: .project  build.gradle
app/jni/: Application.mk  CMakeLists.txt  SDL  SDL2  SDL2_image  SDL2_ttf  SDL_image  SDL_ttf
app/jni/headers/: SDL_primitives.h  files.h  holds.h  rendering.h  ui.h  utility.h
app/jni/src/: Android.mk  CMakeLists.txt  SDL_primitives.cpp  app.cpp  boulder.cpp  boulder_selection.cpp  colors.cpp  files.cpp  globals.cpp  hold.cpp  hold_selection.cpp  holds.cpp  icon.cpp  image.cpp  main.cpp  object.cpp  renderer.cpp  rendering.cpp  resource_manager.cpp  scene.cpp  simple_button.cpp  text.cpp  ui.cpp  utility.cpp
app/jni/src/include/: app.hpp  boulder.hpp  boulder_selection.hpp  colors.hpp  common.hpp  globals.hpp  hold.hpp  hold_selection.hpp  icon.hpp  image.hpp  object.hpp  renderer.hpp  resource_manager.hpp  scene.hpp  simple_button.hpp  text.hpp
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: atlas1.png-autosave.kra
app/src/main/java/com/bouldrovka/app/: Bouldrovka.java
app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLControllerManager.java
app/src/main/res/values/: strings.xml
